aws-vpc-ec2-nginx/security_groups.tf
#security group
resource "aws_security_group" "nginx_sg" {
    vpc_id = aws_vpc.my_vpc.id
    
 #inbound rule for HTTP traffic
    ingress {
        from_port   = 80
        to_port     = 80
        protocol    = "tcp"
        cidr_blocks = ["0.0.0.0/0"]
    }

#outbound rule for all traffic
    egress {
        from_port   = 0
        to_port     = 0
        protocol    = "-1"
        cidr_blocks = ["0.0.0.0/0"]
    }
}

tags = {
    Name = "nginx_sg"
}
